[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sql-query-env"
version = "1.0.0"
description = "SQL Query Environment for OpenEnv - Train AI agents to write SQL queries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "neha222222"},
]
dependencies = [
    "openenv-core>=0.2.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/neha222222/sql-query-env"

[tool.setuptools.packages.find]
include = ["sql_query_env*", "server*"]
